# mapserver

./: KREADME  maperror.c  mapproject.c  mapserver-config.h  mapserver-version.h  mapshape.c
mapscript/swiginc/: image.i
mapscript/tcl/: CMakeLists.txt  README  mapscript.i  mapscriptsupp.tcl  pkgIndex.tcl  tclmodule.i
mapscript/tclplug/: CMakeLists.txt  KNOTES  maptclplug.c  maptclplug.h
